tools/crates/vendor/toml_edit/tests/fixtures/invalid/inline-table/linebreak-1.stderr
TOML parse error at line 3, column 18
  |
3 | simple = { a = 1 
  |                  ^
invalid inline table
expected `}`
